Fixed cards overlapping number of datasets on /data

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -842,6 +842,9 @@ main {
       background-color: rgba(0, 0, 0, 0.6);
       z-index: 4;
       padding: 9rem 3.5rem 3.5rem 3.5rem;
+      @include at-media-max('tablet') {
+        padding-left: 2rem;
+      }
       border-radius: 10px;
       cursor: default;
 
@@ -884,7 +887,7 @@ main {
     }
 
     .data-kit__bg {
-      height: 30rem;
+      height: 115%;
       background-color: #13192F;
       position: absolute;
       z-index: 1;
